--- a/IllusionEngine/IllusionEngine.vcxproj.filters
+++ b/IllusionEngine/IllusionEngine.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClInclude Include="src\Gui\StackMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Gui\Slider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Components\AnimationComponent.cpp">
@@ -145,6 +148,7 @@
     <ClCompile Include="src\Gui\Button.cpp" />
     <ClCompile Include="src\Gui\DropDownList.cpp" />
     <ClCompile Include="src\Gui\StackMenu.cpp" />
+    <ClCompile Include="src\Gui\Gui.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Input\editor_state_key_binds.ini">
