--- a/IllusionEngine/IllusionEngine.vcxproj
+++ b/IllusionEngine/IllusionEngine.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="src\Gui\Button.cpp" />
     <ClCompile Include="src\Gui\DropDownList.cpp" />
     <ClCompile Include="src\Gui\Gui.cpp" />
+    <ClCompile Include="src\Gui\Slider.cpp" />
     <ClCompile Include="src\Gui\StackMenu.cpp" />
     <ClCompile Include="src\LevelEditor\LevelEditor.cpp" />
     <ClCompile Include="src\LevelEditor\Tile.cpp" />
