--- a/IllusionEngine/IllusionEngine.vcxproj
+++ b/IllusionEngine/IllusionEngine.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\LevelEditor\TileMap.h" />
     <ClInclude Include="src\pcHeaders.h" />
     <ClInclude Include="src\Components\AnimationComponent.h" />
     <ClInclude Include="src\Components\Components.h" />
@@ -48,6 +49,7 @@
     <ClInclude Include="src\Utils\Random.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\LevelEditor\TileMap.cpp" />
     <ClCompile Include="src\pcHeaders.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -105,8 +107,6 @@
     <None Include="res\Input\supported_keys.ini" />
     <None Include="res\Window\supported_resolutions.ini" />
     <None Include="res\Window\window_setup.ini" />
-    <None Include="src\Utils\key_binds.ini" />
-    <None Include="src\Utils\supported_keys.ini" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
