--- a/IllusionEngine/IllusionEngine.vcxproj.filters
+++ b/IllusionEngine/IllusionEngine.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClInclude Include="src\LevelEditor\TileMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Utils\UtilityFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Components\AnimationComponent.cpp">
@@ -164,6 +167,7 @@
     <ClCompile Include="src\pcHeaders.cpp" />
     <ClCompile Include="src\Gui\PopUpContainer.cpp" />
     <ClCompile Include="src\LevelEditor\TileMap.cpp" />
+    <ClCompile Include="src\Utils\UtilityFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Input\editor_state_key_binds.ini">
