--- a/IllusionEngine/IllusionEngine.vcxproj.filters
+++ b/IllusionEngine/IllusionEngine.vcxproj.filters
@@ -88,9 +88,6 @@
     <ClInclude Include="src\pcHeaders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Gui\PopUpContainer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\LevelEditor\TileMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -101,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\States\EditorStates\EditorSetupState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LevelEditor\TextureSelector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -165,13 +165,13 @@
     <ClCompile Include="src\Utils\Random.cpp" />
     <ClCompile Include="src\Utils\FPS.cpp" />
     <ClCompile Include="src\pcHeaders.cpp" />
-    <ClCompile Include="src\Gui\PopUpContainer.cpp" />
     <ClCompile Include="src\LevelEditor\TileMap.cpp" />
     <ClCompile Include="src\Utils\UtilityFunctions.cpp" />
     <ClCompile Include="src\States\EditorStates\EditorState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\States\EditorStates\EditorSetupState.cpp" />
+    <ClCompile Include="src\LevelEditor\TextureSelector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Input\editor_state_key_binds.ini">
