--- a/IllusionEngine/IllusionEngine.vcxproj.filters
+++ b/IllusionEngine/IllusionEngine.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClInclude Include="src\LevelEditor\Layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Utils\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Components\AnimationComponent.cpp">
@@ -176,6 +179,7 @@
     <ClCompile Include="src\States\EditorStates\EditorSetupState.cpp" />
     <ClCompile Include="src\LevelEditor\TextureSelector.cpp" />
     <ClCompile Include="src\LevelEditor\Layer.cpp" />
+    <ClCompile Include="src\Utils\Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Input\editor_state_key_binds.ini">
