added simple animation system

--- a/IllusionEngine/IllusionEngine.vcxproj
+++ b/IllusionEngine/IllusionEngine.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Components\AnimationComponent.h" />
     <ClInclude Include="src\LevelEditor\Layer.h" />
     <ClInclude Include="src\LevelEditor\TextureSelector.h" />
     <ClInclude Include="src\LevelEditor\TileMap.h" />
@@ -53,6 +54,7 @@
     <ClInclude Include="src\Utils\UtilityFunctions.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Components\AnimationComponent.cpp" />
     <ClCompile Include="src\LevelEditor\Layer.cpp" />
     <ClCompile Include="src\LevelEditor\TextureSelector.cpp" />
     <ClCompile Include="src\LevelEditor\TileMap.cpp" />
