--- a/IllusionEngine/IllusionEngine.vcxproj
+++ b/IllusionEngine/IllusionEngine.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Components\AnimationComponent.h" />
+    <ClInclude Include="src\Components\Collision.h" />
     <ClInclude Include="src\LevelEditor\Layer.h" />
     <ClInclude Include="src\LevelEditor\TextureSelector.h" />
     <ClInclude Include="src\LevelEditor\TileMap.h" />
@@ -55,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Components\AnimationComponent.cpp" />
+    <ClCompile Include="src\Components\Collision.cpp" />
     <ClCompile Include="src\LevelEditor\Layer.cpp" />
     <ClCompile Include="src\LevelEditor\TextureSelector.cpp" />
     <ClCompile Include="src\LevelEditor\TileMap.cpp" />
@@ -155,7 +157,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
